--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     -->
     </section>
     <section class="spotify">
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4lec5Rk9qkEIMqr5f5DwS6?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>>
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4lec5Rk9qkEIMqr5f5DwS6?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
     <footer class="footergeneral">
         <a href="https://www.instagram.com/jeamdt"><i class="fa-brands fa-instagram"></i></a>
