--- a/pages/capacitaciones.html
+++ b/pages/capacitaciones.html
@@ -65,7 +65,7 @@
             <img src="../media/img/capacitaciond.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Capacitación Destino</h5>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam cumque, perferendis velit omnis dolorem architecto commodi repudiandae neque ducimus fuga!.</p>
+                        <p class="card-text">Es un curso modular de entrenamiento en liderazgo. El primer año está basado en seis módulos y cubre temas como los fundamentos del cristianismo.</p>
                              <a href="https://www.youtube.com/watch?v=QHKdoUyfQhE" class="btn btn-primary" target="blank">Más información</a>
                 </div>
         </div>
@@ -73,7 +73,7 @@
             <img src="../media/img/udelavida.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Universidad de la vida</h5>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam cumque, perferendis velit omnis dolorem architecto commodi repudiandae neque ducimus fuga!</p>
+                        <p class="card-text">Es un curso de nueve semanas diseñado para brindarle al nuevo creyente un cuidado integral hasta que sea consolidado exitosamente.</p>
                             <a href="https://www.youtube.com/watch?v=kjENV9Ignh4" class="btn btn-primary" target="_blank">Más información</a>
                 </div>
           </div>
