--- a/pages/capacitaciones.html
+++ b/pages/capacitaciones.html
@@ -73,7 +73,7 @@
             <img src="../media/img/udelavida.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Universidad de la vida</h5>
-                        <p class="card-text">Es un curso de nueve semanas diseñado para brindarle al nuevo creyente un cuidado integral hasta que sea consolidado exitosamente.Reúne los fundamentos de la Consolidación</p>
+                        <p class="card-text">Es un curso de nueve semanas diseñado para brindarle al nuevo creyente un cuidado integral hasta que sea consolidado exitosamente.</p>
                             <a href="https://www.youtube.com/watch?v=kjENV9Ignh4" class="btn btn-primary" target="_blank">Más información</a>
                 </div>
           </div>
