--- a/index.html
+++ b/index.html
@@ -18,44 +18,27 @@
 <body id="bodycolor">
     <header id="indexheader">
         <!-- BARRA -->
-                <!-- PRUEBA -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><img src="./media/img/logo32.png.png" alt=""></a>
+              <a class="navbar-brand" href="../index.html"><img src="./media/img/logo32.png.png" alt="Logo de nuestro ministerio "></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Ministerios
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Worship</a></li>
-                      <li><a class="dropdown-item" href="#">Medios</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Más...</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Capacitaciones
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="./pages/capacitaciones.html">Universidad de la vida</a></li>
-                      <li><a class="dropdown-item" href="./pages/capacitaciones.html">Capacitación destino</a></li>
-                      <li><a class="dropdown-item" href="./pages/capacitaciones.html">Talleres musicales</a></li>
-                      <li><a class="dropdown-item" href="./pages/capacitaciones.html">Cursos gratuitos</a></li>
-                    </ul>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Conexión</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link active" aria-current="page" href="./pages/ministerios.html">Ministerios</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./pages/capacitaciones.html">Capacitaciones</a>
+                  </li>
+                    <a class="nav-link active" href="./pages/preguntas.html">Preguntas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="./pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -67,14 +50,13 @@
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./media/img/worshipm.jpg" class="d-block w-100" alt="Reuniones generales">
+            <img src="./media/img/worshipm.jpg" class="d-block w-100" alt="Reuniones generales, música en vivo">
           </div>
           <div class="carousel-item">
-            <img src="./media/img/jeamediosjp.jpg" class="d-block w-100" alt="...">
+            <img src="./media/img/jeamediosjp.jpg" class="d-block w-100" alt="Equipo multimedia">
           </div>
-          <!-- Horrible esta foto estirada, lo sé. -->
           <div class="carousel-item">
-            <img src="./media/img/worshipp.jpg" class="d-block w-100" alt="...">
+            <img src="./media/img/alabanzaprade.jpg" class="d-block w-100" alt="Músicos, banda, instrumentistas">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -86,7 +68,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-        <h1> <b> ¿En qué creémos?</b></h1>
+      <h1><b> ¿En qué</b></h1>
         <!-- Linea de tiempo -->
         <div class="linea-tiempo">
             <div class="momento">
@@ -115,14 +97,9 @@
             </div>
           </div>
     </main>
-    <!-- burbujas 
-    <section class="contenedordebur">
-    <div class="c c1"></div>
-    <div class="c c2"></div>
-    -->
     </section>
     <section class="spotify">
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4lec5Rk9qkEIMqr5f5DwS6?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>>
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4lec5Rk9qkEIMqr5f5DwS6?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
     <footer class="footergeneral">
         <a href="https://www.instagram.com/jeamdt"><i class="fa-brands fa-instagram"></i></a>
