--- a/pages/capacitaciones.html
+++ b/pages/capacitaciones.html
@@ -20,7 +20,7 @@
         <!-- BARRA -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><img src="../media/img/logo32.png.png" alt=""></a>
+              <a class="navbar-brand" href="../index.html"><img src="../media/img/logo32.png.png" alt="Nuestro logo del ministerio"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -29,32 +29,17 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Ministerios
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Worship</a></li>
-                      <li><a class="dropdown-item" href="#">Medios</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Más...</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Capacitaciones
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Universidad de la vida</a></li>
-                      <li><a class="dropdown-item" href="#">Capacitación destino</a></li>
-                      <li><a class="dropdown-item" href="#">Cursos gratuitos</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                    </ul>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Conexión</a>
+                    <a class="nav-link active" aria-current="page" href="../pages/ministerios.html">Ministerios</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link active" aria-current="page" href="../pages/capacitaciones.html">Capacitaciones</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../pages/preguntas.html">Preguntas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -62,18 +47,18 @@
     <article>
     <div class="card-div-imagenes">
         <div class="card card-imagenes" style="width: 18rem;">
-            <img src="../media/img/capacitaciond.webp" class="card-img-top" alt="...">
+            <img src="../media/img/capacitaciond.webp" class="card-img-top" alt="Curso bíblico">
                 <div class="card-body">
                     <h5 class="card-title">Capacitación Destino</h5>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam cumque, perferendis velit omnis dolorem architecto commodi repudiandae neque ducimus fuga!.</p>
+                        <p class="card-text">Es un curso modular de entrenamiento en liderazgo. El primer año está basado en seis módulos y cubre temas como los fundamentos del cristianismo.</p>
                              <a href="https://www.youtube.com/watch?v=QHKdoUyfQhE" class="btn btn-primary" target="blank">Más información</a>
                 </div>
         </div>
           <div class="card card imagenes" style="width: 18rem;">
-            <img src="../media/img/udelavida.webp" class="card-img-top" alt="...">
+            <img src="../media/img/udelavida.webp" class="card-img-top" alt="Curso familiar bíblico">
                 <div class="card-body">
                     <h5 class="card-title">Universidad de la vida</h5>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam cumque, perferendis velit omnis dolorem architecto commodi repudiandae neque ducimus fuga!</p>
+                        <p class="card-text">Es un curso de nueve semanas diseñado para brindarle al nuevo creyente un cuidado integral hasta que sea consolidado exitosamente.</p>
                             <a href="https://www.youtube.com/watch?v=kjENV9Ignh4" class="btn btn-primary" target="_blank">Más información</a>
                 </div>
           </div>
@@ -82,38 +67,38 @@
     <section>
       <div class="card-section">
       <div class="card text-bg-dark">
-        <img src="../media/img/enseñanzas.jpg" class="card-img" alt="...">
+        <img src="../media/img/enseñanzas.jpg" class="card-img" alt="Enseñanzas, drummers, instrumentistas">
         <div class="card-img-overlay">
-          <h3 class="card-title">Talleres musicales</h3>
+          <h3 class="card-title">Escuela de música</h3>
           <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam cumque, perferendis velit omnis dolorem architecto commodi repudiandae neque ducimus fuga!</p>
         </div>
       </div>
     </div>
     <div class="card-div-imagenes">
     <div class="card" style="width: 18rem;">
-      <img src="../media/img/ingles.JPG" class="card-img-top" alt="...">
+      <img src="../media/img/ingles.JPG" class="card-img-top" alt="Cursos gratuitos, talleres de idiomas">
       <div class="card-body">
-        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, inventore?</p>
+        <p class="card-text">Clases gratuitas de inglés.</p>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="../media/img/idomas.JPG" class="card-img-top" alt="...">
+      <img src="../media/img/idomas.JPG" class="card-img-top" alt="Cursos gratuitos, talleres de idiomas">
       <div class="card-body">
-        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, aliquid.</p>
+        <p class="card-text">Clases gratuitas de italiano.</p>
       </div>
     </div>
     </div>
     <div class="card-div-imagenes">
       <div class="card" style="width: 18rem;">
-        <img src="../media/img/gym.JPG" class="card-img-top" alt="...">
+        <img src="../media/img/gym.JPG" class="card-img-top" alt="GYM para mayores">
         <div class="card-body">
-          <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, inventore?</p>
+          <p class="card-text">Gimnasia para adultos mayores.</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="../media/img/tejidos.JPG" class="card-img-top" alt="...">
+        <img src="../media/img/tejidos.JPG" class="card-img-top" alt="Curso de tejidos">
         <div class="card-body">
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, aliquid.</p>
+          <p class="card-text">Taller gratuito de tejidos</p>
         </div>
       </div>
       </div>    
